# Komikku

./: .deepsource.toml  .gitignore  .gitlab-ci.yml  Komikku.doap  Makefile  MangaScan.doap  README.md  TODO.md  mangascan.in  meson.build  pylintrc  setup.cfg  take_screenshots  take_screenshots.sh
.gitlab/issue_templates/: bug.md
data/: about_dialog.ui.in  add_dialog.ui  com.gitlab.valos.MangaScan.appdata.xml.in.in  com.gitlab.valos.MangaScan.desktop.in.in  com.gitlab.valos.MangaScan.gschema.xml  info.febvre.Komikku.appdata.xml.in  info.febvre.Komikku.desktop.in  info.febvre.Komikku.gresource.xml  info.febvre.Komikku.gschema.xml.in  info.febvre.MangaScan.appdata.xml.in  info.febvre.MangaScan.desktop.in  info.febvre.MangaScan.gresource.xml  info.febvre.MangaScan.gschema.xml  info.febvre.MangaScan.gschema.xml.in  main_window.ui  mangascan.gresource.xml  menu.xml  menu_card.xml  menu_card_selection_mode.xml  menu_library_selection_mode.xml  menu_reader.xml  meson.build  settings_dialog.ui  shortcuts_overview.ui
data/css/: style.css
data/icons/: meson.build
data/ui/: about_dialog.ui.in  add_dialog.ui  application_window.ui  categories_editor.ui  categories_editor_window.ui  download_manager.ui  download_manager_dialog.ui  explorer.ui  explorer_dialog.ui  main_window.ui  menu.xml  menu_card.xml  menu_reader.xml  meson.build  preferences.ui  preferences_servers_window.ui  preferences_window.ui  settings_dialog.ui  settings_servers_dialog.ui  shortcuts_overview.ui
data/ui/menu/: card.xml  card_selection_mode.xml  download_manager.xml  download_manager_selection_mode.xml  library_search.xml  library_selection_mode.xml  main.xml  reader.xml
flatpak/: com.gitlab.valos.MangaScan.json  flatpak-pip-generator  info.febvre.Komikku.json  info.febvre.MangaScan.json  python3-brotli.json  python3-cached-property.json  python3-cffi.json  python3-cloudscraper.json  python3-dateparser.json  python3-file-magic.json  python3-importlib-metadata.json  python3-js2py.json  python3-keyring.json  python3-natsort.json  python3-pillow.json  python3-pure-protobuf.json  python3-requests.json  python3-requests_toolbelt.json  python3-unidecode.json  python3-wheel.json
komikku/: activity_indicator.py  add_dialog.py  application.py  card.py  categories_editor.py  config_manager.py  downloader.py  explorer.py  importer.py  library.py  main_window.py  model.py  preferences.py  preferences_window.py  settings_dialog.py  updater.py  utils.py
komikku/models/: __init__.py  database.py  settings.py
komikku/reader/: __init__.py  controls.py
komikku/reader/pager/: __init__.py  page.py  webtoon.py
komikku/servers/: __init__.py  centraldemangas.py  crunchyroll.py  dbmultiverse.py  dbmultiverse_de.py  dbmultiverse_es.py  dbmultiverse_fr.py  dbmultiverse_it.py  dbmultiverse_pt.py  dbmultiverse_ru.py  desu.py  dynasty.py  exceptions.py  genkan.py  hatigarmscans.py  izneo.py  jaiminisbox.py  japscan.py  mangadex.py  mangaeden.py  mangaeden_it.py  mangahub.py  mangakawaii.py  mangalib.py  mangalife.py  manganelo.py  mangaplus.py  mangarock.py  mangasee.py  nhentai.py  ninemanga.py  ninemanga_br.py  ninemanga_de.py  ninemanga_es.py  ninemanga_fr.py  ninemanga_it.py  ninemanga_ru.py  peppercarrot.py  peppercarrot_de.py  peppercarrot_es.py  (+19 more)
komikku/servers/akumanga/: __init__.py
komikku/servers/aloalivn/: __init__.py
komikku/servers/apollcomics/: __init__.py
komikku/servers/araznovel/: __init__.py
komikku/servers/argosscan/: __init__.py
komikku/servers/atikrost/: __init__.py
komikku/servers/bestmanga/: __init__.py
komikku/servers/bilibili/: __init__.py
komikku/servers/catmanga/: __init__.py
komikku/servers/centraldemangas/: __init__.py
komikku/servers/coloredcouncil/: __init__.py
komikku/servers/crunchyroll/: __init__.py
komikku/servers/dankefurslesen/: __init__.py
komikku/servers/dbmultiverse/: __init__.py
komikku/servers/desu/: __init__.py
komikku/servers/dynasty/: __init__.py
komikku/servers/edelgardescans/: __init__.py
komikku/servers/genkan/: __init__.py
komikku/servers/guya/: __init__.py
komikku/servers/hachirumi/: __init__.py
komikku/servers/hatigarmscans/: __init__.py
komikku/servers/hunlightscans/: __init__.py
komikku/servers/izneo/: __init__.py
komikku/servers/jaiminisbox/: __init__.py
komikku/servers/japscan/: __init__.py
komikku/servers/jpmangas/: __init__.py
komikku/servers/kireicake/: __init__.py
komikku/servers/komga/: __init__.py
komikku/servers/leviatanscans/: __init__.py
komikku/servers/lupiteam/: __init__.py
komikku/servers/madara/: __init__.py
komikku/servers/magicaltranslators/: __init__.py
komikku/servers/mangadex/: __init__.py
komikku/servers/mangaeden/: __init__.py
komikku/servers/multi/: guya.py  (+4 more)
mangascan/: activity_indicator.py  add_dialog.py  application.py  card.py  config_manager.py  downloader.py  library.py  main_window.py  manga.py  model.py  reader.py  settings_dialog.py  updater.py  utils.py
mangascan/reader/: __init__.py  controls.py
mangascan/servers/: __init__.py  hatigarmscans.py  japscan.py  mangakawaii.py  manganelo.py  mangarock.py  mangasee.py  ninemanga.py  ninemanga_br.py  ninemanga_de.py  ninemanga_es.py  ninemanga_fr.py  ninemanga_it.py  scanvf.py  submanga.py  webtoon.py
po/: LINGUAS  POTFILES.in  README.md  de.po  es.po  fr.po  it.po  komikku.pot  mangascan.pot  meson.build  nl.po  pl.po  pt_BR.po  ru.po  tr.po  update_potfiles.sh
tests/: README.md
tests/servers/: test_bilibili.py  test_centraldemangas.py  test_dbmultiverse.py  test_desu.py  test_dynasty.py  test_genkan.py  test_guya.py  test_hatigarmscans.py  test_jaiminisbox.py  test_japscan.py  test_mangadex.py  test_mangaeden.py  test_mangahub.py  test_mangakawaii.py  test_mangalib.py  test_manganelo.py  test_mangaplus.py  test_mangarock.py  test_mangasee.py  test_nhentai.py  test_ninemanga.py  test_peppercarrot.py  test_readcomiconline.py  test_readmanga.py  test_readmanhwa.py  test_scanmanga.py  test_scanonepiece.py  test_scantrad.py  test_scanvf.py  test_submanga.py  test_viewcomics.py  test_webtoon.py  test_xkcd.py  test_xoxocomics.py
(+36 files in other folders)
