message('Install icons')

# Scalable
icondir = join_paths(datadir, 'icons/hicolor/scalable/apps')
install_data (
    'info.febvre.Komikku.svg',
    install_dir: icondir
)

# Symbolic
icondir = join_paths(datadir, 'icons/hicolor/symbolic/apps')
install_data (
    'info.febvre.Komikku-symbolic.svg',
    install_dir: icondir
)
